--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   firebase_storage: ^10.2.15
   flutter:
     sdk: flutter
+  image_picker: ^0.8.5
   provider: ^6.0.2
+  rating_dialog: ^2.0.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
