--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   rating_dialog: ^2.0.4
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  # flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
