--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,11 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^3.1.14
+  cloud_firestore: ^4.8.3
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.3.17
-  firebase_core: ^1.16.0
-  firebase_storage: ^10.2.15
+  firebase_auth: ^4.7.1
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
   image_picker: ^0.8.5
@@ -39,7 +39,6 @@ dependencies:
   rating_dialog: ^2.0.4
 
 dev_dependencies:
-  # flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
@@ -47,7 +46,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
